// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div>
  <Route
    component={[Function]}
    isLoadingIconVisible={false}
    path="/:path"
  />
</div>
`;

exports[`rendering should render valid snapshot with loading indicator 1`] = `
<div
  className="breadcrumb-wrapper"
>
  <div
    className="d-lg-none float-right"
    data-spec="header-loading-indicator"
  >
    <Component
      className="invert"
    />
  </div>
  <Route
    component={[Function]}
    isLoadingIconVisible={true}
    path="/:path"
  />
</div>
`;
